[Ramki] Fix alignmnet issue

--- a/src/app.scss
+++ b/src/app.scss
@@ -9,6 +9,10 @@ body {
   font-size: 1vmax;
 }
 
+a {
+  text-decoration: none;
+}
+
 .wave-seperator {
   svg {
     position: relative;
